1/25/12 separate strings for Concentration tab and meter title
1/25/12 add strings for "Beer's Law" tab
1/25/12 add faint stroke to all fluids (solution, faucets, stock)
1/23/12 fix flat spot on top of concentration probe image
1/19/12 remove excessive negative space from concentration meter
1/19/12 put units under concentration meter title
1/19/11 move shaker and dropper in front of solute control panel
1/19/12 make body of concentration meter non-draggable
# 0.00.06 (60455) Jan 18, 2012
1/16/12 migrate ColorRange to phetcommon, for use in dilutions
1/12/12 add a thin black line around solution
1/12/12 show only the solute names (no formulae) in the solute combo box
1/12/12 use 3 decimal places and larger value font for concentration meter
1/12/12 capitalize first letter of solute names
1/11/12 Simsharing: add UserComponent chaining for FaucetNode and its FaucetSlider
1/11/12 add shaker orientation to model, used for direction of initial particle velocity
1/10/12 remove shaker particles when the solute is changed
1/10/12 make "Remove Solute" button remove any solute that is falling between the shaker and beaker
1/10/12 first pass at particles exiting shaker (motion is not physical, particles disappear when they reach y=500)
1/10/12 use ImmutableVector2D for all model locations
1/10/12 rotate button on dropper so that lighting direction is consistent
1/10/12 move origin of MomentaryButtonNode to center, to facilitate rotation and layout
1/10/12 move origin of faucet node to center of output pipe, so that it's consistent with the faucet model
1/10/12 make meter and model properties dialog use the same number of decimal places for concentration values
1/10/12 constrain meter from being dragged behind control panel; move control panel with combo box to front, so that combo box popup is aways on top
1/10/12 derive height of solute fluid stream
1/10/12 use precipitate color for particles that come out of the shaker