@@ -1,4 +1,6 @@
-concentration-meter-body.png author=PhET notes=copied and hacked intensity_meter_box.png from bending-light
+concentration-meter-body-center.png author=PhET notes=copied and hacked intensity_meter_box.png from bending-light
+concentration-meter-body-left.png author=PhET notes=copied and hacked intensity_meter_box.png from bending-light
+concentration-meter-body-right.png author=PhET notes=copied and hacked intensity_meter_box.png from bending-light
 concentration-meter-probe.png author=PhET notes=copied and hacked intensity_meter_probe.png from bending-light
 dropper_background.png author=PhET notes=created by Noah P.
 dropper_foreground.png author=PhET notes=created by Noah P.
